metal debugger guide

--- a/metal_puzzles.ipynb
+++ b/metal_puzzles.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Metal Puzzles\n",
     "\n",
-    "Port of [srush/GPU-Puzzles](https://github.com/srush/GPU-Puzzles) to [Metal](https://en.wikipedia.org/wiki/Metal_(API)) using [MLX custom_kernels](https://ml-explore.github.io/mlx/build/html/dev/custom_metal_kernels.html). Inspired by [@awnihannun](https://x.com/awnihannun/status/1833376670063202536)!\n",
+    "Port of [srush/GPU-Puzzles](https://github.com/srush/GPU-Puzzles) to [Metal](https://en.wikipedia.org/wiki/Metal_API) using [MLX Custom Kernels](https://ml-explore.github.io/mlx/build/html/dev/custom_metal_kernels.html). Inspired by [@awnihannun](https://x.com/awnihannun/status/1833376670063202536)!\n",
     "\n",
-    "![test](./metal_puzzles.png)\n",
+    "![Metal Puzzles Logo](./imgs/metal_puzzles.png)\n",
     "\n",
     "GPUs are crucial in machine learning because they can process data on a massively parallel scale. While it's possible to become an expert in machine learning without writing any GPU code, building intuition is challenging when you're only working through layers of abstraction. Additionally, as models grow in complexity, the need for developers to write efficient, high-performance kernels becomes increasingly important to leverage the power of modern hardware.\n",
     "\n",
@@ -37,7 +37,7 @@
     "\n",
     "**Note:** The `source` string below is the body of your Metal kernel, the function signature will be automatically generated for you. Below you'll notice the `input_names` and `output_names` parameters. These define the parameters for your Metal kernel.\n",
     "\n",
-    "To print out the generated Metal kernel set the environment variable `VERBOSE=1`."
+    "**Tip:** If you need a tool for debugging your Kernel read the *Metal Debugger* section at the bottom of the README. Also, you can print out the generated Metal kernel by setting the environment variable `VERBOSE=1`."
    ]
   },
   {
