add show() support for puzzles 1-5

--- a/metal_puzzles.ipynb
+++ b/metal_puzzles.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, 0], dtype=float32)\n",
-      "Spec : array([10, 11, 12, 13], dtype=int32)\n"
+      "# Map\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -87,6 +90,25 @@
     "    spec=map_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, 0], dtype=float32)\n",
+      "Spec : array([10, 11, 12, 13], dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -101,16 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, 0], dtype=float32)\n",
-      "Spec : array([0, 2, 4, 6], dtype=int32)\n"
+      "# Zip\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -147,6 +172,25 @@
     "    spec=zip_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, 0], dtype=float32)\n",
+      "Spec : array([0, 2, 4, 6], dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -165,16 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, 0], dtype=float32)\n",
-      "Spec : array([10, 11, 12, 13], dtype=int32)\n"
+      "# Guard\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -207,6 +254,25 @@
     "    spec=map_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, 0], dtype=float32)\n",
+      "Spec : array([10, 11, 12, 13], dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -223,18 +289,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([[0, 0],\n",
-      "       [0, 0]], dtype=float32)\n",
-      "Spec : array([[10, 11],\n",
-      "       [12, 13]], dtype=int32)\n"
+      "# Map 2D\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -268,6 +335,27 @@
     "    spec=map_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([[0, 0],\n",
+      "       [0, 0]], dtype=float32)\n",
+      "Spec : array([[10, 11],\n",
+      "       [12, 13]], dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -282,18 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([[0, 0],\n",
-      "       [0, 0]], dtype=float32)\n",
-      "Spec : array([[0, 1],\n",
-      "       [1, 2]], dtype=int32)\n"
+      "# Broadcast\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -328,6 +417,27 @@
     "    spec=zip_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([[0, 0],\n",
+      "       [0, 0]], dtype=float32)\n",
+      "Spec : array([[0, 1],\n",
+      "       [1, 2]], dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -344,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
