add threadgroup support to show()

--- a/metal_puzzles.ipynb
+++ b/metal_puzzles.ipynb
@@ -497,6 +497,15 @@
     "    spec=map_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "problem.check()"
    ]
   },
@@ -562,6 +571,15 @@
     "    spec=map_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "problem.check()"
    ]
   },
