update 1D Conv constant

--- a/metal_puzzles.ipynb
+++ b/metal_puzzles.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -454,16 +454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
-      "Spec : array([10, 11, 12, ..., 16, 17, 18], dtype=int32)\n"
+      "MetalProblem.show() is unavaiable for the 'Threadgroups' kernel.\n"
      ]
     }
    ],
@@ -502,9 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
+      "Spec : array([10, 11, 12, ..., 16, 17, 18], dtype=int32)\n"
+     ]
+    }
+   ],
    "source": [
     "problem.check()"
    ]
@@ -520,24 +528,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([[0, 0, 0, 0, 0],\n",
-      "       [0, 0, 0, 0, 0],\n",
-      "       [0, 0, 0, 0, 0],\n",
-      "       [0, 0, 0, 0, 0],\n",
-      "       [0, 0, 0, 0, 0]], dtype=float32)\n",
-      "Spec : array([[11, 11, 11, 11, 11],\n",
-      "       [11, 11, 11, 11, 11],\n",
-      "       [11, 11, 11, 11, 11],\n",
-      "       [11, 11, 11, 11, 11],\n",
-      "       [11, 11, 11, 11, 11]], dtype=float32)\n"
+      "# Threadgroups 2D\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -576,9 +579,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([[0, 0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0, 0],\n",
+      "       [0, 0, 0, 0, 0]], dtype=float32)\n",
+      "Spec : array([[11, 11, 11, 11, 11],\n",
+      "       [11, 11, 11, 11, 11],\n",
+      "       [11, 11, 11, 11, 11],\n",
+      "       [11, 11, 11, 11, 11],\n",
+      "       [11, 11, 11, 11, 11]], dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "problem.check()"
    ]
@@ -600,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +861,7 @@
     "\n",
     "def conv_test(a: mx.array, b: mx.array):\n",
     "    header = \"\"\"\n",
-    "        constant uint THREADGROUP_MEM_SIZE = 8;\n",
+    "        constant uint THREADGROUP_MAX_CONV_SIZE = 12;\n",
     "        constant uint MAX_CONV_SIZE = 4;\n",
     "    \"\"\"\n",
     "\n",
@@ -910,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
