full problem.show() support

--- a/metal_puzzles.ipynb
+++ b/metal_puzzles.ipynb
@@ -461,7 +461,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MetalProblem.show() is unavaiable for the 'Threadgroups' kernel.\n"
+      "# Threadgroups\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -628,9 +633,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
-      "Spec : array([11, 11, 11, ..., 11, 11, 11], dtype=float32)\n"
+      "# Threadgroup Memory\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             1 |             0 |             0 |             1 | \n",
+      "        \n"
      ]
     }
    ],
@@ -677,6 +685,25 @@
     "    spec=map_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
+      "Spec : array([11, 11, 11, ..., 11, 11, 11], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -695,16 +722,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
-      "Spec : array([0, 1, 3, ..., 12, 15, 18], dtype=float32)\n"
+      "# Pooling\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -751,6 +781,25 @@
     "    spec=pooling_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
+      "Spec : array([0, 1, 3, ..., 12, 15, 18], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -767,16 +816,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0], dtype=float32)\n",
-      "Spec : array(140, dtype=float32)\n"
+      "# Dot Product\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -821,6 +873,25 @@
     "    spec=dot_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0], dtype=float32)\n",
+      "Spec : array(140, dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -835,19 +906,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, 0, 0, 0], dtype=float32)\n",
-      "Spec : array([5, 8, 11, 14, 5, 0], dtype=float32)\n",
-      "Failed Tests.\n",
-      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
-      "Spec : array([14, 20, 26, ..., 41, 14, 0], dtype=float32)\n"
+      "# 1D Conv (Simple)\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -898,8 +969,47 @@
     "    spec=conv_spec\n",
     ")\n",
     "\n",
-    "problem.check()\n",
-    "\n",
+    "problem.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, 0, 0, 0], dtype=float32)\n",
+      "Spec : array([5, 8, 11, 14, 5, 0], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "problem.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# 1D Conv (Full)\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
     "# Test 2\n",
     "a = mx.arange(15, dtype=mx.float32)\n",
     "b = mx.arange(4, dtype=mx.float32)\n",
@@ -915,6 +1025,25 @@
     "    spec=conv_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0, 0, ..., 0, 0, 0], dtype=float32)\n",
+      "Spec : array([14, 20, 26, ..., 41, 14, 0], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -931,19 +1060,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([0], dtype=float32)\n",
-      "Spec : array([28], dtype=float32)\n",
-      "Failed Tests.\n",
-      "Yours: array([0, 0], dtype=float32)\n",
-      "Spec : array([28, 77], dtype=float32)\n"
+      "# Prefix Sum (Simple)\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -992,8 +1121,47 @@
     "    spec=prefix_sum_spec\n",
     ")\n",
     "\n",
-    "problem.check()\n",
-    "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0], dtype=float32)\n",
+      "Spec : array([28], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "problem.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Prefix Sum (Full)\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
     "# Test 2\n",
     "SIZE = 15\n",
     "a = mx.arange(SIZE)\n",
@@ -1009,6 +1177,25 @@
     "    spec=prefix_sum_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([0, 0], dtype=float32)\n",
+      "Spec : array([28, 77], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -1023,22 +1210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([[0],\n",
-      "       [0],\n",
-      "       [0],\n",
-      "       [0]], dtype=float32)\n",
-      "Spec : array([[15],\n",
-      "       [51],\n",
-      "       [87],\n",
-      "       [123]], dtype=float32)\n"
+      "# Axis Sum\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -1088,6 +1272,31 @@
     "    spec=axis_sum_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([[0],\n",
+      "       [0],\n",
+      "       [0],\n",
+      "       [0]], dtype=float32)\n",
+      "Spec : array([[15],\n",
+      "       [51],\n",
+      "       [87],\n",
+      "       [123]], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   },
@@ -1104,33 +1313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed Tests.\n",
-      "Yours: array([[0, 0],\n",
-      "       [0, 0]], dtype=float32)\n",
-      "Spec : array([[1, 3],\n",
-      "       [3, 13]], dtype=float32)\n",
-      "Failed Tests.\n",
-      "Yours: array([[0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       ...,\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0],\n",
-      "       [0, 0, 0, ..., 0, 0, 0]], dtype=float32)\n",
-      "Spec : array([[140, 364, 588, ..., 1260, 1484, 1708],\n",
-      "       [364, 1100, 1836, ..., 4044, 4780, 5516],\n",
-      "       [588, 1836, 3084, ..., 6828, 8076, 9324],\n",
-      "       ...,\n",
-      "       [1260, 4044, 6828, ..., 15180, 17964, 20748],\n",
-      "       [1484, 4780, 8076, ..., 17964, 21260, 24556],\n",
-      "       [1708, 5516, 9324, ..., 20748, 24556, 28364]], dtype=float32)\n"
+      "# Matmul (Simple)\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
      ]
     }
    ],
@@ -1181,8 +1376,49 @@
     "    spec=matmul_spec\n",
     ")\n",
     "\n",
-    "problem.check()\n",
-    "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([[0, 0],\n",
+      "       [0, 0]], dtype=float32)\n",
+      "Spec : array([[1, 3],\n",
+      "       [3, 13]], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "problem.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Matmul (Full)\n",
+      "\n",
+      "    Score (Max Per Thread):\n",
+      "    |  Global Reads | Global Writes |  Shared Reads | Shared Writes |\n",
+      "    |             0 |             0 |             0 |             0 | \n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
     "# Test 2\n",
     "SIZE = 8\n",
     "a = mx.arange(SIZE * SIZE, dtype=mx.float32).reshape((SIZE, SIZE))\n",
@@ -1199,6 +1435,37 @@
     "    spec=matmul_spec\n",
     ")\n",
     "\n",
+    "problem.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed Tests.\n",
+      "Yours: array([[0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       ...,\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0],\n",
+      "       [0, 0, 0, ..., 0, 0, 0]], dtype=float32)\n",
+      "Spec : array([[140, 364, 588, ..., 1260, 1484, 1708],\n",
+      "       [364, 1100, 1836, ..., 4044, 4780, 5516],\n",
+      "       [588, 1836, 3084, ..., 6828, 8076, 9324],\n",
+      "       ...,\n",
+      "       [1260, 4044, 6828, ..., 15180, 17964, 20748],\n",
+      "       [1484, 4780, 8076, ..., 17964, 21260, 24556],\n",
+      "       [1708, 5516, 9324, ..., 20748, 24556, 28364]], dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
     "problem.check()"
    ]
   }
